Fix aui-active z-index

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -566,7 +566,7 @@ pre {
 
 .aui-bs-docs-sidenav > .aui-active > a {
   position: relative;
-  z-index: 2;
+  z-index: 0;
   padding: 9px 15px;
   border: 0;
   text-shadow: 0 1px 0 rgba(0,0,0,.15);
